@@ -1,3 +1,8 @@
+2009-06-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* chrome/content/sogo-connector/general/implementors.addressbook.groupdav.js:
+	removed obsolete module.
+
 2009-04-06  Ludovic Marcotte <lmarcotte@inverse.ca>
 
         * Bumped version number to 0.93
